--- a/index.html
+++ b/index.html
@@ -9,68 +9,73 @@
 <body>
     <nav class="navbar">
         <div class="navbar-section">
-            <a href="#news" class="news">News</a>
-            <a href="#shows" class="shows">Shows</a>
-            <a href="#music" class="music">Music</a>
-            <a href="#media" class="media">Line Up</a>
-            <a href="#bio" class="bio">Bio</a>
-            <a href="#contact" class="contact">Contact</a>        
+            <ul>
+                <li><a href="#news" class="news">News</a></li>
+                <li><a href="#shows" class="shows">Shows</a></li>
+                <li><a href="#music" class="music">Music</a></li>
+                <li><a href="#media" class="media">Lineup</a></li>
+                <li><a href="#bio" class="bio">Bio</a></li>
+                <li><a href="http://huntedbyelephants.com/shop/" class="shop">Shop</a></li>
+                <li><a href="#contact" class="contact">Contact</a></li>
+            </ul>  
         </div>
     </nav>
     <div class="banner">
-        <img src="images/banner.jpg" alt="Hunted By Elephants - Band">
+        <img src="images/banner.jpg" alt="Hunted By Elephants - Band" width="100%" height="100%">
     </div>
     <div class="row-1">
         <div class="header">
-            <h1 class="news">NEWS</h1>
+            <a id="news"><h1 class="news">NEWS</h1></a>
         </div>
             <div class="fb-feed">
-                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fhuntedbyelephants%2F&tabs=timeline&width=500&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId=395738067215013" frameborder="0"></iframe>
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fhuntedbyelephants%2F&tabs=timeline&width=500&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId=395738067215013" frameborder="0" width="500px" height="500px"></iframe>
             </div>
     </div>
     <div class="row-2">
         <div class="header">
-            <h1 class="shows">SHOWS</h1>
-        </div>
-            <div class="shows">         
-                <a href="#" class="show">TBA @ Farmer Phil's Festival, Shrewsbury, Shropshire</a>
-                <a href="#" class="show">TBA @ Farmer Phil's Festival, Shrewsbury, Shropshire</a>
-                <a href="#" class="show">TBA @ Farmer Phil's Festival, Shrewsbury, Shropshire</a>
-                <a href="#" class="show">TBA @ Farmer Phil's Festival, Shrewsbury, Shropshire</a>
-                <a href="#" class="show">TBA @ Farmer Phil's Festival, Shrewsbury, Shropshire</a>
-                <a href="#" class="show">TBA @ Farmer Phil's Festival, Shrewsbury, Shropshire</a>
-            </div>
+            <a id="shows"><h1 class="shows">SHOWS</h1></a>
+        </div>       
+                <a href="#" class="1">TBA @ Farmer Phil's Festival, Shrewsbury, Shropshire</a>
+                <br>
+                <a href="#" class="2">TBA @ Farmer Phil's Festival, Shrewsbury, Shropshire</a>
+                <br>
+                <a href="#" class="3">TBA @ Farmer Phil's Festival, Shrewsbury, Shropshire</a>
+                <br>
+                <a href="#" class="4">TBA @ Farmer Phil's Festival, Shrewsbury, Shropshire</a>
+                <br>
+                <a href="#" class="5">TBA @ Farmer Phil's Festival, Shrewsbury, Shropshire</a>
+                <br>
+                <a href="#" class="6">TBA @ Farmer Phil's Festival, Shrewsbury, Shropshire</a>
     </div>
     <div class="row-3">
         <div class="header">
-                <h1 class="music">MUSIC</h1>
+                <a id="music"><h1 class="music">MUSIC</h1></a>
         </div>
                 <div class="album">
-                    <img src="images/album.jpg" alt="Rise of the Elephant">
-                </div>            
-            <div class="spotify">
-                <iframe src="https://open.spotify.com/embed/album/1N2v9yqSi5OjK8RPmWggY7" frameborder="0">
-                </iframe>
+                    <img src="images/album.jpg" alt="Rise of the Elephant" height="500px" width="500px">
+                    <iframe src="https://open.spotify.com/embed/album/1N2v9yqSi5OjK8RPmWggY7" frameborder="0" height="500px" width="500px">
+                    </iframe>
             </div>
             <div class="button">
-                <a href="https://open.spotify.com/album/1N2v9yqSi5OjK8RPmWggY7" class="button">Listen on Spotify</a>
+                <ul class="btn">
+                <li><a href="https://open.spotify.com/album/1N2v9yqSi5OjK8RPmWggY7" target="_blank" class="spot-button">Listen on Spotify</a>
+                </li>
+                </ul>
             </div>
         
     </div>
     <div class="row-4">
         <div class="header">
-            <h1 class="media">MEDIA</h1>
+            <a id="media"><h1 class="media">MEDIA</h1></a>
         </div>
-        <div class="yt-1">
-            <iframe src="https://www.youtube.com/embed/AZlFD0VE61E?controls=0" frameborder="0"></iframe>
-        </div>
-        <div class="yt-2">
-            <iframe src="https://www.youtube.com/embed/K2G5RZ3vfak?controls=0" frameborder="0"></iframe>
+        <div class="yt">
+            <iframe src="https://www.youtube.com/embed/AZlFD0VE61E?controls=0" frameborder="0" height="500px" width="900px"></iframe>
+            <iframe src="https://www.youtube.com/embed/K2G5RZ3vfak?controls=0" frameborder="0" height="500px" width="900px"></iframe>
         </div>
     </div>
     <div class="row-5">
         <div class="header">
-            <h1 class="lineup">LINEUP</h1>
+            <a id="lineup"><h1 class="lineup">LINEUP</h1></a>
         </div>
         <div class="members">
             <h5 class="tolis">Apostolos Liapis</h5>
@@ -85,7 +90,7 @@
     </div>
     <div class="row-6">
         <div class="header">
-            <h1 class="bio">BIO</h1>
+            <a id="bio"><h1 class="bio">BIO</h1></a>
         </div>
         <p>Inspired by the rock classics of the 70s, Hunted By Elephants are a high-energy 4-piece hard rock band renewing the time-honoured union of soaring vocals, growling riffs and energising drum beats.
 
@@ -93,13 +98,14 @@
             
             Hunted By Elephants' debut album Rise of the Elephant is now out following the great reception of their first two singles Unnamed and Human Eyes.</p>
     </div>
-    <footer>
-        <div class="copyright">
-            <p>&copy;2019-2020</p>
+    <footer class="bottom">
+            <a id="contact"><p>&copy;2018-2020</p></a>
             <p>Hunted By Elephants</p>
-        </div>
+            <a class="email" href="mailto:huntedbyelephants@gmail.com">huntedbyelephants@gmail.com</a>
         <div class="socials">
-            <p>email, facebook, insta, twitter</p>
+           <a href="https://www.facebook.com/huntedbyelephants/" target="_blank"><img class="facebook" src="images/facebook.svg" height="100px" width="100px"></a>
+            <a href="https://www.instagram.com/huntedbyelephants/" target="_blank"><img class="instagram" src="images/instagram.svg" height="100px" width="100px"></a>
+            <a href="https://twitter.com/huntbyelephants" target="_blank" ><img class="twitter" src="images/twitter.svg" height="100px" width="100px"></a>
         </div>
     </footer>
 </body>
