added sticky nav and CSS amendments

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
                 <li><a href="#news" class="news">News</a></li>
                 <li><a href="#shows" class="shows">Shows</a></li>
                 <li><a href="#music" class="music">Music</a></li>
-                <li><a href="#media" class="media">Lineup</a></li>
+                <li><a href="#media" class="media">Media</a></li>
+                <li><a href="#lineup" class="lineup">Lineup</a></li>
                 <li><a href="#bio" class="bio">Bio</a></li>
                 <li><a href="http://huntedbyelephants.com/shop/" class="shop">Shop</a></li>
                 <li><a href="#contact" class="contact">Contact</a></li>
@@ -25,7 +26,7 @@
     </div>
     <div class="row-1">
         <div class="header">
-            <a id="news"><h1 class="news">NEWS</h1></a>
+            <a id="news"><h1 class="news">News</h1></a>
         </div>
             <div class="fb-feed">
                 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fhuntedbyelephants%2F&tabs=timeline&width=500&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId=395738067215013" frameborder="0" width="500px" height="500px"></iframe>
@@ -33,7 +34,7 @@
     </div>
     <div class="row-2">
         <div class="header">
-            <a id="shows"><h1 class="shows">SHOWS</h1></a>
+            <a id="shows"><h1 class="shows">Shows</h1></a>
         </div>       
                 <a href="#" class="1">TBA @ Farmer Phil's Festival, Shrewsbury, Shropshire</a>
                 <br>
@@ -49,7 +50,7 @@
     </div>
     <div class="row-3">
         <div class="header">
-                <a id="music"><h1 class="music">MUSIC</h1></a>
+                <a id="music"><h1 class="music">Music</h1></a>
         </div>
                 <div class="album">
                     <img src="images/album.jpg" alt="Rise of the Elephant" height="500px" width="500px">
@@ -66,7 +67,7 @@
     </div>
     <div class="row-4">
         <div class="header">
-            <a id="media"><h1 class="media">MEDIA</h1></a>
+            <a id="media"><h1 class="media">Media</h1></a>
         </div>
         <div class="yt">
             <iframe src="https://www.youtube.com/embed/AZlFD0VE61E?controls=0" frameborder="0" height="500px" width="900px"></iframe>
@@ -75,7 +76,7 @@
     </div>
     <div class="row-5">
         <div class="header">
-            <a id="lineup"><h1 class="lineup">LINEUP</h1></a>
+            <a id="lineup"><h1 class="lineup">Lineup</h1></a>
         </div>
         <div class="members">
             <h5 class="tolis">Apostolos Liapis</h5>
@@ -90,15 +91,18 @@
     </div>
     <div class="row-6">
         <div class="header">
-            <a id="bio"><h1 class="bio">BIO</h1></a>
+            <a id="bio"><h1 class="bio">Bio</h1></a>
         </div>
         <p>Inspired by the rock classics of the 70s, Hunted By Elephants are a high-energy 4-piece hard rock band renewing the time-honoured union of soaring vocals, growling riffs and energising drum beats.
-
-            Formed in mid 2018 by Apostolos Liapis (vocals, keys), Roman Flourendzou (guitar), Raymond Phelan (bass) and Tommaso Soru (drums) their riff driven songs have heavy undertones and invoke an atmosphere of the golden years of hard rock from the 70s and beyond.
-            
-            Hunted By Elephants' debut album Rise of the Elephant is now out following the great reception of their first two singles Unnamed and Human Eyes.</p>
+        <br>
+        <br>
+        Formed in mid 2018 by Apostolos Liapis (vocals, keys), Roman Flourendzou (guitar), Raymond Phelan (bass) and Tommaso Soru (drums) their riff driven songs have heavy undertones and invoke an atmosphere of the golden years of hard rock from the 70s and beyond.
+        <br>
+        <br>
+       Hunted By Elephants' debut album Rise of the Elephant is now out following the great reception of their first two singles Unnamed and Human Eyes.</p>
     </div>
     <footer class="bottom">
+        <a id="contact"></a><h1>Contact</h1></a>
             <a id="contact"><p>&copy;2018-2020</p></a>
             <p>Hunted By Elephants</p>
             <a class="email" href="mailto:huntedbyelephants@gmail.com">huntedbyelephants@gmail.com</a>
