--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hunted By Elephants</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="images/hbe-fav.png" type="image/gif">
 </head>
 <body>
     <nav class="navbar">
@@ -30,6 +31,12 @@
         </div>
             <div class="fb-feed">
                 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fhuntedbyelephants%2F&tabs=timeline&width=500&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId=395738067215013" frameborder="0" width="500px" height="500px"></iframe>
+            </div>
+            <div class="button">
+                <ul class="btn">
+                <li><a href="https://www.facebook.com/huntedbyelephants/" target="_blank" class="fb-button">Follow on Facebook</a>
+                </li>
+                </ul>
             </div>
     </div>
     <div class="row-2">
