--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#media" class="media">Media</a></li>
                 <li><a href="#lineup" class="lineup">Lineup</a></li>
                 <li><a href="#bio" class="bio">Bio</a></li>
-                <li><a href="http://huntedbyelephants.com/shop/" class="shop">Shop</a></li>
+                <li><a href="https://www.musicglue.com/huntedbyelephants" class="shop">Shop</a></li>
                 <li><a href="#contact" class="contact">Contact</a></li>
             </ul>  
         </div>
